--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1658,24 +1658,7 @@ mark {
 }
 
 .text-center {
-    text-align: center;
-    font-size: 14px;
-}
-
-.text-mini {
-    font-size: 14px;
-}
-
-.introduction {
-    font-size: 28px;
-}
-
-.commentary {
-    font-size: 20px;
-}
-
-.portfolio_title {
-    font-size: 28px;
+    text-align: center
 }
 
 .text-justify {
